_sass/minima/comments.scss
/*
FIXME: Figure out how to make the colors here change depending
on dark or light theme.
- Noggin_bops 2025-12-14
*/

.comment {
    border-color: #cacaca;
    border-style: solid;
    border-width: 1px;
    border-radius: 8px;
    color: black;
    display: block;
    margin-bottom: 10px;
    margin-top: 10px;
    padding: 0px;
    width: 100%;

    background-color: #fcfcfc;
}

.comment .commentheader {
    border-bottom-color: #cacaca;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    color: black;
    display: block;
    font-size: 12px;
    font-style: normal;
    font-variant: normal;
    font-weight: normal;
    margin: 0px;
    padding: 0px;
    overflow: hidden;
    white-space: nowrap;
    width: 100%;
    
    background-image: linear-gradient(to bottom, #f0f0f0, #fcfcfc);
}

.comment .commentheader .commentgravatar {
    display: inline-block;
    text-overflow: clip;
    vertical-align: middle;
    margin-left: 5px;
    margin-right: 4px;
    padding: 2px;
    padding-bottom: 4px;
}

.comment .commentheader a:link {
  text-decoration: none;
}

.comment .commentheader a:hover {
  border-bottom: 1px solid;
}

.comment .commentheader .commentuser {
  background-color: transparent;
  color: black;
  display: inline;
  float: none;
  font-size: 12px;
  font-style: normal;
  font-variant: normal;
  font-weight: bold;
  margin-left: 5px;
  margin-right: 10px;
  overflow-x: visible;
  overflow-y: visible;
  padding: 0px;
  text-overflow: clip;
  white-space: nowrap;
  width: 0px;
}

.comment .commentheader .commentdate {
  background-color: transparent;
  color: #777;
  display: inline;
  float: none;
  font-size: 11px;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  margin: 0px;
  overflow-x: visible;
  overflow-y: visible;
  padding: 0px;
  text-overflow: clip;
  white-space: nowrap;
  width: 20em;
}

.comment .commentbody {
  background-attachment: scroll;
  background-clip: border-box;
  background-color: transparent;
  background-image: none;
  background-origin: padding-box;
  color: #333;
  display: block;
  margin-bottom: 1em;
  margin-left: 1em;
  margin-right: 1em;
  margin-top: 1em;
  overflow-x: visible;
  overflow-y: visible;
  padding: 0em;
}

.comment .commentbody p {
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  margin-left: 0em;
  margin-right: 0em;
}

